--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,7 +1,7 @@
 <div id="landing">
   <div class="landing-title">
     <h1>Willkommen auf
-      <span class="highlight-title">{{site.username}}</span>,
+      <span class="highlight-title">{{site}}</span>,
     </h1>
     <h1>
       <span id="txt-rotate" data-period="2000"
