--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,7 +1,13 @@
 <div id="landing">
   <div class="landing-title">
     <h1>Willkommen auf
-      <span class="highlight-title">{{site}}</span>,
+      <span class="highlight-title">
+        <script>
+          document.getElementById("highlight-title").innerHTML =
+            
+            + window.location.href;
+        </script>
+      </span>
     </h1>
     <h1>
       <span id="txt-rotate" data-period="2000"
