--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -3,9 +3,7 @@
     <h1>Willkommen auf
       <span class="highlight-title">
         <script>
-          document.getElementById("highlight-title").innerHTML =
-            
-            + window.location.href;
+          document.getElementById("landing").innerHTML = window.location.href;
         </script>
       </span>
     </h1>
