--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,12 +1,12 @@
 <div id="landing">
   <div class="landing-title">
     <h1>Willkommen auf
-      <span class="highlight-title">
+      <!--<span class="highlight-title">-->
         <script>
           document.getElementByClass("highlight-title").innerHTML = 
             '<span class="highlight-title">' + window.location.href + '</span>';
         </script>
-      </span>
+      <!--</span>-->
     </h1>
     <h1>
       <span id="txt-rotate" data-period="2000"
