--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,12 +1,11 @@
 <div id="landing">
   <div class="landing-title">
     <h1>Willkommen auf
-      <!--<span class="highlight-title">-->
+      <span class="highlight-title">
+      </span>
         <script>
-          document.getElementByClass("highlight-title").innerHTML = 
-            '<span class="highlight-title">' + window.location.href + '</span>';
+          document.getElementByClass("highlight-title").innerHTML = window.location.href';
         </script>
-      <!--</span>-->
     </h1>
     <h1>
       <span id="txt-rotate" data-period="2000"
