--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -4,7 +4,9 @@
       <span class="highlight-title">
       </span>
         <script>
-          document.getElementByClass("highlight-title").innerHTML = window.location.href';
+          $(document).ready(function () {
+                                          window.print();
+                                        });
         </script>
     </h1>
     <h1>
