--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,13 +1,8 @@
 <div id="landing">
   <div class="landing-title">
     <h1>Willkommen auf
-      <span class="highlight-title">
+      <span class="highlight-title">test
       </span>
-        <script>
-          $(document).ready(function () {
-                                          window.print();
-                                        });
-        </script>
     </h1>
     <h1>
       <span id="txt-rotate" data-period="2000"
