--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,7 +1,7 @@
 <div id="landing">
   <div class="landing-title">
     <h1>Willkommen auf
-      <span class="site-url">
+      <span class="highlight-title site-url">
       </span>
     </h1>
     <h1>
