--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -25,7 +25,7 @@ $primary-color: #ff073a;
 /* General */
 
 html {
-  background: $bg-color;
+  /*background: $bg-color;*/
   color: $text-color;
   font-family: $font-family;
   font-size: $font-size-base;
@@ -35,7 +35,9 @@ html {
 }
 
 body {
-  height: 100%;
+  background-image: url("./img/background.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 /* Typography */
