--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -35,7 +35,7 @@ html {
 }
 
 body {
-  background-image: url("./img/background.png");
+  background-image: url(".assets/img/background.svg");
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
