--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,7 +14,7 @@ $font-size-base: 1rem !default;
 $font-size-h1: 2rem !default;
 $font-weight-strong: 600;
 $text-color: #fff !default;
-$bg-color: rgba(43, 45, 47, 1);
+$bg-color: rgba(43, 45, 47, 0);
 $card-bg-color: linear-gradient(
   145deg,
   rgba(115, 115, 115, 0.15) 15%,
@@ -25,7 +25,11 @@ $primary-color: #ff073a;
 /* General */
 
 html {
-  background: $bg-color;
+  /*background: $bg-color;*/
+  /*background-color: rgba(0,0,0,0,);*/
+  background-image: url("../assets/img/background.png") !important;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: $text-color;
   font-family: $font-family;
   font-size: $font-size-base;
