--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/favicon/favicon-16x16.png" | prepend: site.baseurl }}">
   <link rel="manifest" href="{{ "/assets/favicon/site.webmanifest" | prepend: site.baseurl }}">
 
-  <!--<link rel="stylesheet" href="{{ "/assets/css/main.min.css" | prepend: site.baseurl }}">-->
-  <!--<link rel="stylesheet" href="{{ "/assets/css/vendors.min.css" | prepend: site.baseurl }}">-->
-  <link rel="stylesheet" href="{{ "/loader.scss" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/main.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/vendors.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/_sass/main.scss" | prepend: site.baseurl }}">
 
   <script src="{{ "/assets/js/vendors.min.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/assets/js/app.min.js" | prepend: site.baseurl }}"></script>
