--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,9 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap");
 
+@import url(./vendors/aos.css);
+@import url(./vendors/normalize.css);
+
 /* Variables */
 
 $small-screen: 48em !default;
