--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,6 +1,6 @@
 <div id="landing">
   <div class="landing-title">
-    <h1>Willkommen auf
+    <h1><span class="color-red">W</span><span class="color-white">illkommen auf
       <span class="highlight-title site-url">
       </span>
     </h1>
