--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,1 +1,12 @@
 
+.color-red {
+  font-color: rgba(245, 39, 39, 0.8);
+}
+
+.color-white {
+  font-color: rgba(255, 255, 255, 0.8);
+}
+
+.color-black {
+  font-color: rgba(0, 0, 0, 0.8);
+}
