--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,7 @@ body {
   background-image: url("../img/background.png") !important;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
 .color-red {
   font-color: rgba(245, 39, 39, 0.8);
 }
