--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,6 +3,10 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
+div#landing {
+  background: transparent;
+}
 .color-red {
   font-color: rgba(245, 39, 39, 0.8);
 }
