--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,4 @@
-body {
+html {
   background-image: url("http://spinnenhain.github.io/assets/img/background.png") !important;
   background-repeat: no-repeat;
   background-attachment: fixed;
