--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,7 +5,7 @@ html {
 }
 
 div#landing {
-  background: transparent;
+  background: rgba(0, 0, 0, 0);
 }
 .color-red {
   font-color: rgba(245, 39, 39, 0.8);
