--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,5 @@
 html {
-  background-image: url("https://spinnenhain.github.io/assets/img/background.png") !important;
+  background-image: url(https://spinnenhain.github.io/assets/img/background.png) !important;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
