--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -28,19 +28,19 @@
         </a>
       {% endif %}
 
-      {% if site.github_username != null %}
-        <a class="social-link" aria-label="My GitHub" target="_blank" rel="noreferrer"
-          href="https://github.com/{{site.github_username}}"
+      {% if site.steam_username != null %}
+        <a class="social-link" aria-label="My Steam" target="_blank" rel="noreferrer"
+          href="https://steamcommunity.com/id/{{site.steam_username}}"
         >
           <svg viewBox="0 0 200 200" class="circle">
             <circle cx="100" cy="100" r="80" />
           </svg>
           <div class="social">
             <svg class="social-svg" viewBox="0 0 48 48">
-              <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#github" | prepend: site.baseurl }}"></use>
+              <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#steam" | prepend: site.baseurl }}"></use>
             </svg>
           </div>
-          <span class="label">GitHub</span>
+          <span class="label">Steam</span>
         </a>
       {% endif %}
 
