--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -88,7 +88,7 @@
         <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#whatsapp" | prepend: site.baseurl }}"></use>
       </svg>
     </div>
-    <span class="label">WhatsApp/span>
+    <span class="label">WhatsApp</span>
   </a>
   {% endif %}
 
