--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <p>
-    &copy; 2020 Designed & Developed by
-    <a class="highlight-link" href="https://longpdo.github.io/" target="_blank" rel="noreferrer">
-      Long Do
+    &copy; 2025 Designed & Developed by
+    <a class="highlight-link" href="https://www.spinnenhain.de/" target="_blank" rel="noreferrer">
+      Andreas Bolder
     </a>
   </p>
   <p>
