--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     </div>
   </div>
   {% include landing-page.html %}
-  <div class="layout">
+  <!--<div class="layout">
     {%if site.show_aboutme_card %}
       <section class="card neumorphism-card-big">
         {% include section-aboutme.html %}
@@ -58,6 +58,7 @@
     </section>
     {% endif %}
   </div>
+  -->
   {% include footer.html %}
   <link rel="stylesheet" href="{{ "/assets/scss/main.scss" | prepend: site.baseurl }}">
 </body>
