--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -6,7 +6,7 @@
     </h1>
     <h1>
       <span id="txt-rotate" data-period="2000"
-        data-rotate='["{{site.typing_text}}", "scroll down for more."]'
+        data-rotate='["{{site.typing_text}}", "Hier entsteht etwas Einzigartiges.", "Hier nimmt etwas Großartiges Gestalt an.", "Etwas Wunderbares entsteht hier.", "Hier wird Großes erschaffen.","Ein großartiges Projekt wächst hier.","Hier formt sich etwas Beeindruckendes.","Etwas Außergewöhnliches entsteht an diesem Ort.","Hier wird etwas ganz Besonderes geschaffen."]'
       >
       </span>
     </h1>
