--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -6,8 +6,40 @@
     </h1>
     <h1>
       <span id="txt-rotate" data-period="2000"
-        data-rotate='["{{site.typing_text}}", "Hier entsteht etwas Einzigartiges.", "Hier nimmt etwas Großartiges Gestalt an.", "Etwas Wunderbares entsteht hier.", "Hier wird Großes erschaffen.","Ein großartiges Projekt wächst hier.","Hier formt sich etwas Beeindruckendes.","Etwas Außergewöhnliches entsteht an diesem Ort.","Hier wird etwas ganz Besonderes geschaffen."]'
-      >
+        data-rotate='["{{site.typing_text}}",
+        "Hier entsteht etwas Einzigartiges...",
+        "Hier entsteht etwas Wunderbares...",
+        "Hier entsteht etwas Außergewöhnliches...",
+        "Hier entsteht etwas Beeindruckendes...",
+      
+        "Hier nimmt etwas Großartiges Gestalt an...",
+        "Hier nimmt etwas Einzigartiges Gestalt an...",
+        "Hier nimmt etwas Wunderbares Gestalt an...",
+        "Hier nimmt etwas Beeindruckendes Gestalt an...",
+        "Hier nimmt etwas Außergewöhnliches Gestalt an...",
+        
+        "Etwas Großartiges entsteht hier...",
+        "Etwas Einzigartiges entsteht hier...",
+        "Etwas Wunderbares entsteht hier...",
+        "Etwas Beeindruckendes entsteht hier...",
+        "Etwas Außergewöhnliches entsteht hier...",
+        
+        "Hier wird Einzigartiges erschaffen...",
+        "Hier wird Wunderbares erschaffen...",
+        "Hier wird Großes erschaffen...",
+        "Hier wird Beeindruckendes erschaffen...",
+        "Hier wird Außergewöhnliches erschaffen...",
+        
+        "Ein einzigartiges Prokekt wächst hier...",
+        "Ein wunderbares Projekt wächst hier...",
+        "Ein großartiges Projekt wächst hier...",
+        "Ein beeindruckendes Projekt wächst hier...",
+        "Ein außergewöhnliches Projekt wächst hier...",
+        
+        "Hier formt sich etwas Beeindruckendes...",
+        "Etwas Außergewöhnliches entsteht an diesem Ort...",
+        "Hier wird etwas ganz Besonderes geschaffen..."
+        ]'>
       </span>
     </h1>
     <script>
